--- a/web/index.html
+++ b/web/index.html
@@ -2,9 +2,28 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>mypersonalwebsite</title>
+  <title>Limitless19 Portfolio website</title>
+  <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/my-personal-website-28fe2.appspot.com/o/limitlessicon.jpg?alt=media&token=f21dea47-ba61-4d3e-9880-63ad44a8c453">
 </head>
 <body>
+  <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.5.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.6.1/firebase-remote-config.js"></script>
+
+  <script>
+    var firebaseConfig = {
+      apiKey: "AIzaSyCpz2eutbO5m2NwJT9xEmZOhngQv_y4ZiA",
+      authDomain: "limitless19.firebaseapp.com",
+      databaseURL: "https://my-personal-website-28fe2.firebaseio.com",
+      projectId: "my-personal-website-28fe2",
+      storageBucket: "https://my-personal-website-28fe2.firebaseio.com/.appspot.com",
+     // messagingSenderId: "...",
+      appId: "1:876794819618:web:6269a7e01e92764c0c067b",
+     // measurementId: "G-..."
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
