After first layout

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Limitless19 Portfolio website</title>
+  <title>Limitless19 Portfolio</title>
   <link rel="icon" href="https://firebasestorage.googleapis.com/v0/b/my-personal-website-28fe2.appspot.com/o/limitlessicon.jpg?alt=media&token=f21dea47-ba61-4d3e-9880-63ad44a8c453">
 </head>
 <body>
